...
            make.width.equalTo(30.0)
            make.height.equalTo(50.0)
        }
        checkBoxButton.setImage(UIImage(named:"check-off"), for: .normal)
        checkBoxButton.setImage(UIImage(named:"check-on"), for: .selected)
        checkBoxButton.setImage(UIImage(named:"check-on"), for: .highlighted)
        checkBoxButton.accessibilityIdentifier = "checkout:checkbox-button"
        
        // "I agree with the terms and conditions of service"
        acceptTermsButton = UIButton()
        addSubview(acceptTermsButton)
        acceptTermsButton.snp.makeConstraints { (make) in
            make.left.equalTo(self.checkBoxButton.snp.right).offset(7)
...
        checkoutButton.setTitleColor(UIColor.diffusedBlack, for: .normal)
        checkoutButton.setTitleColor(UIColor.blue, for: .highlighted)
        checkoutButton.setTitleColor(UIColor.gray.withAlphaComponent(0.7), for: .disabled)
        checkoutButton.layer.borderColor = UIColor.gray.withAlphaComponent(0.7).cgColor
        checkoutButton.layer.borderWidth = 1.5
        checkoutButton.setTitle("checkout:checkout-button-title".localized, for: .normal)
        checkoutButton.accessibilityIdentifier = "checkout:checkout-button"
        
        // Spinner to indicate checkout is in progress
        checkoutActivityIndicator = UIActivityIndicatorView(activityIndicatorStyle: .gray)
        addSubview(checkoutActivityIndicator)
        checkoutActivityIndicator.snp.makeConstraints { (make) in
            make.center.equalTo(checkoutButton)
...
