...
        footerButton.setTitleColor(UIColor.diffusedBlack, for: .normal)
        footerButton.setTitleColor(UIColor.blue, for: .highlighted)
        footerButton.layer.borderColor = UIColor.diffusedBlack?.cgColor
        footerButton.layer.borderWidth = 1.5
        footerButton.setTitle("success:done-button-title".localized, for: .normal)
        footerButton.addTarget(self, action: #selector(dismissAction(sender:)), for: .touchUpInside)
        footerButton.accessibilityIdentifier = "success:footer-button"
    }
    
    override func viewDidLayoutSubviews() {
        super.viewDidLayoutSubviews()
        footerButton.layer.cornerRadius = footerButton.frame.height / 2
    }
...
