...
        addPaymentMethodButton.setImage(UIImage(named: "creditcard"), for: .normal)
        addPaymentMethodButton.imageEdgeInsets = UIEdgeInsetsMake(0, 0, 0, 10)
        addPaymentMethodButton.titleLabel?.font = UIFont.systemFont(ofSize: 12)
        addPaymentMethodButton.setTitleColor(UIColor.emeraldGreen, for: .normal)
        addPaymentMethodButton.setTitleColor(UIColor.blue, for: .highlighted)
        addPaymentMethodButton.tintColor = UIColor.purple
        addPaymentMethodButton.accessibilityIdentifier = "checkout:add-payment-button"

        // -------------
        topSeparator = UIView()
        self.addSubview(topSeparator)
        topSeparator.snp.makeConstraints { (make) in
            make.top.equalTo(addPaymentMethodButton).offset(-2)
...
